@@ -29,17 +29,16 @@ import okhttp3.RequestBody;
 import okhttp3.Response;
 import okhttp3.ResponseBody;
 import org.eclipse.dataspaceconnector.iam.oauth2.core.Oauth2Configuration;
-import org.eclipse.dataspaceconnector.iam.oauth2.core.jwt.Oauth2ValidationRule;
+import org.eclipse.dataspaceconnector.iam.oauth2.core.rule.Oauth2ValidationRule;
 import org.eclipse.dataspaceconnector.iam.oauth2.spi.JwtDecoratorRegistry;
+import org.eclipse.dataspaceconnector.iam.oauth2.spi.Oauth2Service;
 import org.eclipse.dataspaceconnector.spi.EdcException;
 import org.eclipse.dataspaceconnector.spi.iam.ClaimToken;
-import org.eclipse.dataspaceconnector.spi.iam.IdentityService;
 import org.eclipse.dataspaceconnector.spi.iam.TokenRepresentation;
 import org.eclipse.dataspaceconnector.spi.iam.TokenValidationService;
-import org.eclipse.dataspaceconnector.spi.iam.ValidationRule;
 import org.eclipse.dataspaceconnector.spi.result.Result;
 import org.eclipse.dataspaceconnector.spi.types.TypeManager;
-import org.eclipse.dataspaceconnector.token.JwtClaimValidationRule;
+import org.eclipse.dataspaceconnector.token.JwtValidationRule;
 import org.eclipse.dataspaceconnector.token.TokenValidationServiceImpl;
 
 import java.io.IOException;
@@ -51,20 +50,21 @@ import java.util.List;
 /**
  * Implements the OAuth2 client credentials flow and bearer token validation.
  */
-public class Oauth2ServiceImpl implements IdentityService {
+public class Oauth2ServiceImpl implements Oauth2Service {
 
     private static final String GRANT_TYPE = "client_credentials";
     private static final String ASSERTION_TYPE = "urn:ietf:params:oauth:client-assertion-type:jwt-bearer";
     private static final String CONTENT_TYPE = "application/x-www-form-urlencoded";
 
     private final Oauth2Configuration configuration;
-
     private final OkHttpClient httpClient;
     private final TypeManager typeManager;
-    private final TokenValidationService tokenValidationService;
     private final JWSSigner tokenSigner;
     private final JwtDecoratorRegistry jwtDecoratorRegistry;
     private final JWSAlgorithm jwsAlgorithm;
+
+    private List<JwtValidationRule> validationRules;
+    private TokenValidationService  tokenValidationService;
 
     /**
      * Creates a new instance of the OAuth2 Service
@@ -74,31 +74,30 @@ public class Oauth2ServiceImpl implements IdentityService {
      * @param client                    Http client
      * @param jwtDecoratorRegistry      Registry containing the decorator for build the JWT
      * @param typeManager               Type manager
-     * @param additionalValidationRules An optional list of {@link ValidationRule} that are evaluated <em>after</em> the
-     *                                  standard OAuth2 validation
      */
-    public Oauth2ServiceImpl(Oauth2Configuration configuration,
-                             JWSSigner tokenSigner,
-                             OkHttpClient client,
-                             JwtDecoratorRegistry jwtDecoratorRegistry,
-                             TypeManager typeManager,
-                             JwtClaimValidationRule... additionalValidationRules) {
+    public Oauth2ServiceImpl(Oauth2Configuration configuration, JWSSigner tokenSigner, OkHttpClient client, JwtDecoratorRegistry jwtDecoratorRegistry, TypeManager typeManager) {
         this.configuration = configuration;
         this.typeManager = typeManager;
         httpClient = client;
         this.jwtDecoratorRegistry = jwtDecoratorRegistry;
         this.tokenSigner = tokenSigner;
 
-        var rules = new ArrayList<JwtClaimValidationRule>();
-        rules.add(new Oauth2ValidationRule(configuration.getProviderAudience(), this.configuration)); //OAuth2 validation must ALWAYS be done
-        rules.addAll(List.of(additionalValidationRules));
-        this.tokenValidationService = new TokenValidationServiceImpl(configuration.getIdentityProviderKeyResolver(), Collections.unmodifiableList(rules));
+        //OAuth2 validation must ALWAYS be done
+        validationRules = new ArrayList<>();
+        validationRules.add(new Oauth2ValidationRule(this.configuration));
+        this.tokenValidationService = new TokenValidationServiceImpl(configuration.getIdentityProviderKeyResolver(), Collections.unmodifiableList(validationRules));
 
         if (tokenSigner instanceof ECDSASigner) {
             jwsAlgorithm = JWSAlgorithm.ES256;
         } else {
             jwsAlgorithm = JWSAlgorithm.RS256;
         }
+    }
+
+    @Override
+    public void addAdditionalValidationRule(JwtValidationRule additionalValidationRule) {
+        validationRules.add(additionalValidationRule);
+        this.tokenValidationService = new TokenValidationServiceImpl(configuration.getIdentityProviderKeyResolver(), Collections.unmodifiableList(validationRules));
     }
 
     @Override
@@ -139,8 +138,8 @@ public class Oauth2ServiceImpl implements IdentityService {
     }
 
     @Override
-    public Result<ClaimToken> verifyJwtToken(String token) {
-        return tokenValidationService.validate(token);
+    public Result<ClaimToken> verifyJwtToken(TokenRepresentation tokenRepresentation) {
+        return tokenValidationService.validate(tokenRepresentation);
     }
 
     private String buildJwt() {
